Add submission materials and update env example

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,31 @@
 # Agentic Commerce Environment Variables
 # Copy this file to .env.local and fill in your API keys
 
-# OpenAI API Key (Optional)
-# If provided, the system will use GPT-4 for intent parsing and decision explanations.
-# If not provided, the system falls back to deterministic simulation mode.
+# ======================================
+# OpenAI (Optional - for AI explanations)
+# ======================================
 NEXT_PUBLIC_OPENAI_API_KEY=
 
-# Future: Other API integrations
-# NEXT_PUBLIC_ANTHROPIC_API_KEY=
-# NEXT_PUBLIC_PERPLEXITY_API_KEY=
+# ======================================
+# Retailer APIs (Optional - enables Live Mode)
+# ======================================
+
+# BestBuy Products API (FREE - developer.bestbuy.com)
+BESTBUY_API_KEY=
+
+# Amazon Product Advertising API 5.0 (affiliate-program.amazon.com)
+AMAZON_ACCESS_KEY=
+AMAZON_SECRET_KEY=
+AMAZON_PARTNER_TAG=
+AMAZON_REGION=us-east-1
+
+# Walmart Affiliate API (developers.walmart.com)
+WALMART_CONSUMER_ID=
+WALMART_PRIVATE_KEY=
+
+# ======================================
+# Mode Configuration
+# ======================================
+# Set to 'live' to enable real API calls (requires keys above)
+# Default: simulation (uses realistic mock data)
+NEXT_PUBLIC_API_MODE=simulation
